k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nlp-app
  labels:
    app: nlp-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nlp-app
  template:
    metadata:
      labels:
        app: nlp-app
    spec:
      containers:
        - name: nlp-app
          image: <DOCKERHUB_USERNAME>/think-nlp-app:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
