k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nlp-app
spec:
  selector:
    app: nlp-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
